# geomap-engine

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
examples/: basic_usage.rs
proto/: frame.proto
scripts/: gen_tum_fixture.py
src/: engine.rs  fixture.rs  geojson.rs  lib.rs  projection.rs
tests/: replay.rs  replay_tum_fixture.rs
tests/fixtures/: session.json  tum_freiburg1_xyz.json
